2001-03-09  Alex Graveley  <alex@ximian.com>

	* src/soup-wsdl/wsdl-parse.c (wsdl_parse): set definitions = NULL
	to pass -Werror.

2001-03-09  Alex Graveley  <alex@ximian.com>

	* tests/simple-test.c (main): demonstrate correct behavior here by
	unref'ing the context after message creation.

	* tests/stress-test.c (main): ditto.

	* src/soup-core/soup-queue.c (soup_queue_message): set
	req->priv->recv_buf = NULL here, as the media continues to barrate
	dangling pointers.

	* src/soup-core/soup-server.h: make SoupServerAuthorizeFn typedef
	const correct

	* src/soup-core/soup-server.c (soup_server_authorize): make const
	correct.

	* src/soup-core/soup-message.c (soup_message_cleanup): don't free
	response phrase. Don't set req->priv->recv_buf = NULL here, as
	leaking memory continues to be considered "bad".

	* src/soup-core/soup-headers.c (soup_headers_parse_response):
	don't alloc status_phrase, just point into buffer.

	* src/soup-core/soup-cgi.c (soup_cgi_read_cb): deal with response
	phrase now being const.

	* src/soup-core/soup-apache.c (soup_apache_message_create): action
	is already strdup'd in soup_message_new (). response_phrase
	is now a const string. Remove unneeded content-type header.
	(soup_apache_read_request): slight reorg, also use ap_palloc()
	instead of ap_calloc().
	(soup_apache_handler): initial authentication handling, only basic
	auth at this point.

2001-03-09  Dick Porter  <dick@ximian.com>

	* src/soup-wsdl/wsdl-parse.h: Each WSDL struct has a pointer into
	the XML tree document

	* src/soup-wsdl/wsdl-parse.c (wsdl_qnamecmp): A function for
	comparing element names and namespaces.

	Use wsdl_qnamecmp instead of strcmp to make parsing
	namespace-aware.
	
	(wsdl_end_element): Maintain a pointer into the XML tree for each
	WSDL node.

	* src/soup-wsdl/wsdl-memory.c (wsdl_free_definitions): Free the
	XML document

	* src/soup-wsdl/main.c (main): Move the xml doc dump to here, for
	better modularity
